build: Modify pom (#12)
Co-authored-by: unknowIfGuestInDream <liang.tang.cx@gmail.com>